style.v1.02.css
body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    margin: 0; 
    height: 100%; 
    overflow: hidden;
}
.p-2 {
    width: 100%;
}
.maincol-top {
    height: calc(100vh - 290px);
    overflow-y: scroll;
    margin-bottom: 10px;
    border: solid 0px blue;
    width: 100%;
}
.maincol-bottom {
    margin-bottom: 5px;
    width: 82%;
    position: absolute;
    bottom: 0;
}

.skip-link {
    position: absolute;
    top: -40px;
    left: 0;
    background: #000;
    color: #fff;
    padding: 8px;
    z-index: 100;
}

.skip-link:focus {
    top: 0;
}

.message {
    margin: 0px 0 0px 0;
    padding: 10px;
    /*border-radius: 10px;*/
}
.assistant-message {
    background-color: #f0f0f0;
    border-bottom: solid 1px #ddd;
}
.user-message {
    background-color: #fbfbfb;
}
#username {
    margin-right: 10px; /* add some space to the right */
    white-space: nowrap;
}
.header {
    /*text-decoration: underline;*/
    background-color: #f8f9fa; /* Light gray background */
    border: solid 1px lightgray;
}
.logo {
    max-width: 260px;
    width: 100%;
    margin: 10px;
    margin-right: 20px;
}
.header h1 {
    font-size: 18pt;
    margin: 0; /* remove margin to prevent overflow on small screens */
    text-align: center;
    margin: 15px 0px;
}
.header p {
    margin: 0; /* remove margin to prevent overflow on small screens */
    text-align: right;
    margin: 15px 0px;
}
.navbar {
    display: none; /* Hide by default */
}
.main-content {
    height: calc(100vh - 70px);
    display: flex;
}
.menu {
    overflow: hidden;
    /*background-color: #343a40;*/
    background-color: #1e558a;
    color: white;
    padding: 15px;
    height: calc(100vh - 61px);
    position: relative;
    /*
    width: 275px !important;
    flex: none !important; /* This prevents the column from growing or shrinking */
}

.menu a {
    display: inline-block;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 165px;
    color: white;
    text-decoration: none;
}
.menu a:hover {
    text-decoration: underline;
}
.menu p {
    width: 14%;
    font-size: 0.8vw;
    display: inline-block;
    position: absolute;
    bottom: 0;
    margin-left: 0;
}
.maincolumn {
    width: 100%;
}
.form-control {
    width: 99%;
    margin: 5px auto;
}
.waiting-indicator {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 9999;
    background-color: rgba(255, 255, 255, 0.7); /* Optional: semi-transparent background */
 
}
.openai-icon {
    width: 30px;
    height: 30px;
    margin: 0px 6px;
    margin-right: 9px;
}
.user-icon {
    width: 40px;
    height: 40px;
    margin: 0px;
    margin-right: 6px;
}

.left-nav-chat-list {
    width: 100%;
    height: 60%;
    overflow-y: auto;   
    overflow-x: hidden;
}
nav div::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(72, 85, 209, 0.3);
    border-radius: 10px;
    background-color: #F5F5F5;
  }
  
  nav div::-webkit-scrollbar {
    width: 12px;
    background-color: #F5F5F5;
  }
  
  nav div::-webkit-scrollbar-thumb {
    border-radius: 10px;
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
    background-color: #c1c1c1;
  }
.newchat {
    border: solid gray 1px;
    border-radius: 5px;
    padding: 5px;
    margin: 10px 10px 10px 0px;
    display: inline-block;
    width: 100%;
}
.chat-item {
    position: relative;
    width: 100%;
    padding: 5px 10px;
    border-radius: 5px;
}

.chat-icon {
    position: absolute;
    right: 0;
    visibility: hidden;
}

.edit-icon {
    right: 30px;
}

.delete-icon {
    right: 0px;
}

.edit-confirm-icon {
    margin-left: 10px;
}

.chat-title {
    display: inline-block;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 300px;
}

.edit-field {
    width: 70%;
}

.current-chat {
    /*background-color: #545a60;*/
    background-color: #1d6ab8;
    min-width: 100%;
}

.left-nav-bottom {
    width: 86%;
    padding-bottom: 17px;
    position: absolute;
    bottom: 0;
}

.logout-link {
    margin-left: 10px;
    /*background-color: #007bff;*/
    /*color: #fff;*/
    padding: 5px 10px;
    border-radius: 5px;
    /*text-decoration: none;*/
    font-size: 14px;
    display: inline-block;
    transition: background-color 0.3s;
}
/*
.logout-link:hover {
    background-color: #0056b3;
}
*/
.print-title {
    display: none;
}

/*#printButton {
}
*/
/* Show the navbar with the hamburger menu on small screens */
@media (max-width: 767.98px) { 
    .navbar {
        display: flex;
        background-color: #000; /* Or any color you prefer */
    }
    .menu {
        display: none !important;

    }
    .greeting {
        display: none;
    }
    .header h1 {
        font-size: 14px;
    }
    .text-center {
        display: none;
    }
    .maincol-top {
        height: calc(100vh - 320px); /* Fill the height minus header */
    }
    .menu.active {
        display: block !important; /* Show menu when active */
        position: fixed; /* Fixed position */
        width: 100%; /* Full width */
        height: 100%; /* Full height */
        top: 60px; /* Below the header */
        left: 0;
        z-index: 1000; /* On top of other content */
        overflow: scroll;
    }
}

/* Show the navbar with the hamburger menu on small screens */
@media (max-width: 538px) { 
    .maincol-top {
        height: calc(100vh - 360px); /* Fill the height minus header */
    }
}

@media print {
    /* Hide elements not required in print view */
    form, #printButton, .header, .navbar, .menu, .maincol-bottom  {
    display: none !Important;
    }
    /* Adjust chat content to fill page */
    .main-content {
    width: 100%;
    margin: 0;
    padding: 0;
    }
    .maincol-top {
    display: block !important;
    overflow: visible !important;

    }
        
    .print-title {
        display: block;
        font-size: 14pt;
    }
}

.left-nav-top {
    width: 100%;
}

/*style for tooltip*/
.tooltip {
    width : 60%;
    --bs-tooltip-bg: #4b4343;
    --bs-tooltip-arrow-height: 0.9rem;
}
.tooltip-inner {
    max-width: 100% !important;
}
.tooltip-content {
    text-align: left;
    padding: 10px 15px;
}
.tooltip a{
    color: rgb(134 176 237);
}
.trainingSupport-tooltip {
    width : 30%;
}
.acknowledgement-tooltip {
    width : 30%;
    --bs-tooltip-bg: #4b4343;
    inset: auto 0px 0px 112px !important;
}
.acknowledgement-tooltip > .tooltip-arrow {
    left:-100px !important;
}
#messageList {
    min-height: 55%;
    width: 100%;
    margin-top: 10px;
}

.messageBox {
    width: 99%;
    position: relative;
    bottom: 0;
    display: inline-block;
}

.message-icon {
    position: absolute;   
    width: 30px;
    height: 30px;
    right: 3%;
    bottom: 10px;
    cursor: pointer;
  }

.contactAcknowledgeTr{
    height: 40px; 
    font-size:small;
    background-color: #f3e9e9
}

.contactAcknowledgeDiv{
    float: left;
    margin: 5px 0 0px 10px;
}

.contactAdminToolDiv{
    float: right;
    margin: 5px 30px 0 0;
}

.contactBtn {
    width: 80px; 
    margin-left: 20px; 
}
.uploadFileSpan {
    color: salmon;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    max-width: 200px;
    display: inline-block;
}


/*datatable styles*/
.dt-search, .dt-paging{
    float: right;
}
.dt-info, .dt-paging{
    font-size:smaller;
}
.select2-container {
    width: 100% !important;
}
.select2-search .select2-search__field {
    width: 100% !important;
}
.dtNameCol .dtDateCol{
    width: 15%;
}
.dtEmailCol {
    width: 20%;
}
.dt-search, .dt-paging{
    float: right;
}
table.dataTable>tbody>tr.selected>* {
    box-shadow: inset 0 0 0 9999px rgb(191 211 239 / 90%);
    color: black;
}
.filterhead {
    padding-left: 0px !important;
    padding-right: 10px !important;
}

input[type=button] {
    border-radius: 50px;
    flex-grow: 2;
    border: none;
    background-color: #6c757d;
    color:white;
}

.adminToolBtn {
    width: 100px;
    margin-right: 20px;
}

#userInfoForm > .row {
    margin: 10px;
}

